--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -55,3 +55,17 @@
 .m-25{
     margin-left: 25%;
 }
+
+
+.employee-img {
+    width: 50px; 
+    height: 50px;
+    object-fit: cover; 
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto; 
+}
+td, th {
+    text-align: center; 
+    vertical-align: middle; 
+}
