--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -54,6 +54,13 @@
     background-color: #EFF6FF;
 }
 
+
+
+
+
+
+
+
 .m-25{
     margin-left: 25%;
 }
@@ -82,9 +89,44 @@ td, th {
     display: block;
     box-shadow: 8px 8px 8px #3b83f63f;
 }
+.btn-tools{
+    background-color: #3B82F6;
+    color: white;
+    width: 50px; 
+    height: 50px;
+    border-radius: 10px;
+    font-size: 22px;
+    box-shadow: 3px 3px 3px #3b83f63f;
+
+    &:hover{
+        background-color: #10B981;
+    }
+}
+.btn-tools:active{
+    background-color: #0d9a6b;
+    scale: 0.98;
+    box-shadow: 4px 4px 4px #3b83f63f;
+}
+.btn-info-payroll{
+    bottom: 95%;
+    right: 10%;
+    color: #3B82F6;
+    text-shadow: 1px 1px 1px #3b83f63f;
+    font-size: 20px;
+    &:hover{
+        color: #10B981;
+    } 
+}
+.btn-info:active{
+    color: #0d9a6b;
+    text-shadow: 3px 3px 3px #3b83f63f; 
+}
+.fa-circle-info:active{
+    scale: 0.95;
+}
 // modale show payrolls
 .modal-dialog{
-    min-width: 70%;    
+    min-width: 70%;   
 }
 
 .logo-container {
@@ -117,3 +159,4 @@ td, th {
 hr{
     color: #989b9d;
 }
+
