--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -32,6 +32,7 @@
 .bg-general{
     background-color: #F3F4F6;
 }
+
 .dark-grey{ //per titoli
     color: #1F2937;
 }
@@ -50,7 +51,7 @@
 .bg-light-grey{ //background generale
     background-color: #F3F4F6;
 }
-.bg-light-blu{ //background sezioni particolari
+.bg-light-blue{ //background sezioni particolari
     background-color: #EFF6FF;
 }
 
@@ -59,6 +60,9 @@
 }
 .text-shadow-grey{
     text-shadow: 2px 2px 2px #1f29376f;
+}
+.text-shadow-white{
+    text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.303);
 }
 
 
@@ -206,3 +210,24 @@ hr{
     color: #989b9d;
 }
 
+
+//navbar
+.list-navbar > li > a{
+    color: white;
+    font-weight: bold;  
+    &:hover{
+        color: #1F2937;
+    }
+}
+.list-navbar > li{
+    transition: scale 0.5s;
+    transform-origin: left;
+    scale: 1;
+}
+.list-navbar > li:hover{
+    transition: scale 0.5s;
+    scale: 1.05;
+}
+.hr-navbar{
+    color: #1F2937;
+}
