--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -231,3 +231,46 @@ hr{
 .hr-navbar{
     color: #1F2937;
 }
+
+// dashboard
+.logo-dashboard {
+    width: 80%; /* Dimensione della cornice */
+    height: 80%; /* Deve essere uguale alla larghezza per il cerchio */
+    border-radius: 50%; /* Rende la cornice circolare */
+    overflow: hidden; /* Assicura che l'immagine rimanga all'interno del cerchio */
+    display: flex; /* Centra l'immagine */
+    justify-content: center; /* Allinea orizzontalmente l'immagine */
+    align-items: center; /* Allinea verticalmente l'immagine */
+    box-shadow: 8px 8px 8px #3b83f63f;
+}
+
+.logo-dashboard img {
+    width: 100%; /* L'immagine occupa tutto lo spazio disponibile */
+    height: 100%; /* Si adatta alla cornice */
+    object-fit: cover; /* Evita distorsioni */
+}
+
+.font-title-dashboard{
+    font-size: 45px;
+}
+
+.btn-card-dashboard{
+    background-color: white;
+    color: #3B82F6;
+    height: 30px;
+    border-radius: 7px;
+    font-size: 15px;
+    padding: 2px 10px;
+    box-shadow: 3px 3px 3px #3b83f63f;
+
+    &:hover{
+        background-color: #10B981;
+        color: white;
+    }
+    &:active{
+        background-color: #0d9a6b;
+        box-shadow: 4px 4px 4px #3b83f63f;
+        scale: 0.98;
+    }
+}
+
