--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -215,46 +215,45 @@ hr{
 .list-navbar > li > a{
     color: white;
     font-weight: bold;  
-    &:hover{
-        color: #1F2937;
+    font-size: 17px;
+    transition: text-shadow 0.5s;
+   &:hover{
+        transition: text-shadow 0.5s;
+        text-shadow: 4px 4px 4px #1f2937b6;
     }
 }
 .list-navbar > li{
     transition: scale 0.5s;
-    transform-origin: left;
+    transform-origin: 30%;
     scale: 1;
 }
 .list-navbar > li:hover{
     transition: scale 0.5s;
     scale: 1.05;
 }
-.hr-navbar{
-    color: #1F2937;
-}
-
-// dashboard
-.logo-dashboard {
-    width: 80%; /* Dimensione della cornice */
-    height: 80%; /* Deve essere uguale alla larghezza per il cerchio */
+.logo-navbar{
+    width: 40%; /* Dimensione della cornice */
+    height: 40%; /* Deve essere uguale alla larghezza per il cerchio */
     border-radius: 50%; /* Rende la cornice circolare */
     overflow: hidden; /* Assicura che l'immagine rimanga all'interno del cerchio */
     display: flex; /* Centra l'immagine */
     justify-content: center; /* Allinea orizzontalmente l'immagine */
     align-items: center; /* Allinea verticalmente l'immagine */
-    box-shadow: 8px 8px 8px #3b83f63f;
+    box-shadow: 5px 5px 5px #1f29376f;
 }
-
-.logo-dashboard img {
+.logo-navbar img {
     width: 100%; /* L'immagine occupa tutto lo spazio disponibile */
     height: 100%; /* Si adatta alla cornice */
     object-fit: cover; /* Evita distorsioni */
 }
 
+// dashboard
+
 .font-title-dashboard{
-    font-size: 45px;
+    font-size: 50px;
 }
 
-.btn-card-dashboard{
+.btn-add-dashboard{
     background-color: white;
     color: #3B82F6;
     height: 30px;
@@ -273,4 +272,55 @@ hr{
         scale: 0.98;
     }
 }
+
+.btn-list-dashboard{
+    background-color: #3B82F6;  
+    border-radius: 30px; 
+    text-align: center; 
+    display: inline-block;
+    width: 90%;
+    box-shadow: 5px 5px 5px #3b83f63f;
+    transition: scale 0.6s;
+
+
+    &:hover{
+        background-color: #10B981;
+        transition: scale 0.6s;
+        scale: 1.03;
+        transform-origin:center;
+        
+
+        
+    }
+    
+    &:active{
+        background-color: #0d9a6b;
+        box-shadow: 3px 3px 3px #3b83f63f;
+        scale: 1.02;
+    }
+}
+.icon-users{
+    font-size: 13rem;
+    color: white;
+    transition: scale 0.5s;
+
+}
+.h1-btn-dashboard{
+    font-size: 40px;
+    font-weight: bold;
+    transition: scale 0.5s;
+
+}
+.logo-payslipflow-dashboard{
+    width: 20%;
+    opacity: 0.4;
+    bottom: 2%;
+    left: calc(50% - 10%);
+    
+}
+.logo-payslipflow-navbar{
+    width: 50%;
+
+}
+
 
