--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -431,3 +431,14 @@ hr{
 .form-group > label{
     font-weight:bold ;
 }
+
+
+// RIMUOVERE FRECCETTE INPUT NUMBER
+// input[type=number]::-webkit-inner-spin-button,
+// input[type=number]::-webkit-outer-spin-button {
+//     -webkit-appearance: none;
+//     margin: 0;
+// }
+// input[type=number] {
+//     -moz-appearance: textfield;
+// }
