--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -212,6 +212,11 @@ td, th {
 hr{
     color: #989b9d;
 }
+.logo-payslipflow-modal-info{
+    width: 5%;
+    top: 10%;
+    left: 2%;
+}
 
 
 //navbar
@@ -459,4 +464,6 @@ hr{
         box-shadow: none;
     }
 }
+
+
 
