--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -472,6 +472,9 @@ hr{
     border-radius: 10px;
     box-shadow: 0px 0px 10px #4b556351;
 }
+.register-link{
+    font-size: 12px;
+}
 
 .card-what-left{
     width: 20%;
@@ -522,5 +525,14 @@ hr{
         scale: 1.1;
     }
 }
-
+.link-login-page{
+    text-decoration: none;
+    color: white;
+    transition: scale 0.5s;
+    &:hover{
+        transition: scale 0.5s;
+        scale: 1.1;
+        color: white;
+    }
+}
 
