--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -259,7 +259,7 @@ hr{
 // dashboard
 
 .font-title-dashboard{
-    font-size: 50px;
+    font-size: 60px;
 }
 
 .btn-add-dashboard{
@@ -534,5 +534,9 @@ hr{
         scale: 1.1;
         color: white;
     }
+}
+
+.title-welcome{
+    font-size: 55px;
 }
 
